# IWannaReadA

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.yaml  html_template.html  vcpkg.json
models/: cls.ncnn.param  det.ncnn.param  rec.ncnn.param
src/: anki_connect.cpp  anki_connect.h  ccedict.cpp  common.h  config.cpp  config.h  det.cpp  det.h  dict_extract.cpp  dict_extract.h  dict_extract_汉英词典（第3版）.cpp  dict_extract_汉英词典（第3版）.h  dict_parser.h  impl_document_container.cpp  impl_document_container.h  impl_document_container.h~  implwebview2.cpp  implwebview2.h  log.cpp  log.h  main.cpp  ocr_engine.cpp  ocr_engine.h  rec.cpp  rec.h  screenshot.cpp  screenshot.h  task.h  tooltip.cpp  tooltip.cpp~  tooltip.h  util.cpp  util.h  util_ocr.cpp  util_ocr.h  util_pinyin.cpp  util_pinyin.h  util_text.cpp  util_text.h  util_utf8.cpp  (+1 more)
